--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -28,7 +28,7 @@ jobs:
       steps:
       # 检出代码
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       
       - uses: actions/setup-python@v5
 
@@ -38,20 +38,14 @@ jobs:
       - name: Install dependencies
         run: python -m pip install --upgrade pip setuptools wheel
 
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==3.0.0b1
-
+      # - name: Install cibuildwheel
+      #   run: python -m pip install cibuildwheel==2.23.3
       - name: Build wheels
-        run: python -m cibuildwheel --output-dir wheelhouse
+        run: python -m build --wheel
         
-      # You can test your matrix by printing the current Python version
-      - name: Display Python version
-        run: python -c "import sys; print(sys.version)"
-      - name: Install dependencies
-        run: python -m pip install --upgrade pip setuptools wheel
 
       # - name: Build wheels
-      #   uses: pypa/cibuildwheel@v2.21.3
+      #   uses: pypa/cibuildwheel@v2.23.3
       #   with:
       #     output-dir: dist/
 
