--- a/pyproject.toml
+++ b/pyproject.toml
@@ -174,7 +174,7 @@ exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
 # test-requires = ["pytest", "lxml", "torch"]
 # test-command = "pytest"
 
-build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
+build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]
 
 
 free-threaded-support = true
