--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -25,7 +25,7 @@ jobs:
           # macos-13 is an intel runner, macos-14 is apple silicon
           os: [ ubuntu-latest, windows-latest, macos-latest, macos-13, macos-14]
 #          modify python version in project.toml
-      steps:
+      steps: 
       # 检出代码
       - name: Checkout code
         uses: actions/checkout@v4
@@ -38,11 +38,10 @@ jobs:
       - name: Install dependencies
         run: python -m pip install --upgrade pip setuptools wheel build
 
-
-      # - name: Install cibuildwheel
-      #   run: python -m pip install cibuildwheel==2.23.3
       - name: Build wheels
-        run: python -m build --wheel
+        uses: pypa/cibuildwheel@v3.0.0b1
+        with:
+          output-dir: dist/
         
 
       # - name: Build wheels
