--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -3,19 +3,19 @@ on: workflow_dispatch
 
 
 jobs:
-#  build_sdist:
-#    name: Build source distribution
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4
-#
-#      - name: Build sdist
-#        run: pipx run build --sdist
-#
-#      - uses: actions/upload-artifact@v4
-#        with:
-#          name: cibw-sdist
-#          path: dist/*.tar.gz
+  build_sdist:
+    name: Build source distribution
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build sdist
+        run: pipx run build --sdist
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: cibw-sdist
+          path: dist/*.tar.gz
 
   build_wheels:
       name: Build wheels on ${{ matrix.os }}
@@ -29,28 +29,29 @@ jobs:
       # 检出代码
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          submodules: true
       
       - uses: actions/setup-python@v5
 
-#      - name: Upload pybind11
-#      - run: cd /project/ && git submodule add https://github.com/pybind/pybind11 cpp_easygraph/pybind11 && git submodule update --init --recursive
-#
       # You can test your matrix by printing the current Python version
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
       - name: Install dependencies
-        run: python -m pip install --upgrade pip setuptools wheel build pybind11
+        run: python -m pip install --upgrade pip setuptools wheel build
+
+
+      - name: test pybind11
+        run: |
+            python -m pip install --upgrade pip
+            pip install pytest
+            pytest tests/
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.23.3
         with:
           output-dir: dist/
-        
 
-      # - name: Build wheels
-      #   uses: pypa/cibuildwheel@v2.23.3
-      #   with:
-      #     output-dir: dist/
 
 
       - name: Upload wheels
@@ -61,7 +62,7 @@ jobs:
 
 
   upload_pypi:
-      needs: [ build_wheels ]
+      needs: [build_wheels, build_sdist]
       runs-on: ubuntu-latest
       environment: pypi
       permissions:
