--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -23,7 +23,9 @@ jobs:
       strategy:
         matrix:
           # macos-13 is an intel runner, macos-14 is apple silicon
-          os: [ ubuntu-latest, windows-latest, macos-latest, macos-13, macos-14]
+#          os: [ ubuntu-latest, windows-latest, macos-latest, macos-13, macos-14]
+           os: [ ubuntu-latest]
+
 #          modify python version in project.toml
       steps: 
       # 检出代码
@@ -69,13 +71,17 @@ jobs:
             path: dist/
             merge-multiple: true
 
-        - name: Upload to PyPI
-          env:
-              TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
-              TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
-          run: |
-              python -m pip install --upgrade pip twine
-              twine upload dist/*
+#        - name: Upload to PyPI
+#          env:
+#              TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
+#              TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+#          run: |
+#              python -m pip install --upgrade pip twine
+#              twine upload dist/*
+        - name: Publish distribution 📦 to PyPI
+          uses: pypa/gh-action-pypi-publish@master
+          with:
+            password: ${{ secrets.PYPI_API_TOKEN }}
 
 
 
