--- a/.github/workflows/buildwheel.yml
+++ b/.github/workflows/buildwheel.yml
@@ -45,16 +45,16 @@ jobs:
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.23.3
-        with:
-          output-dir: dist/
-          merge-multiple: true
+#        with:
+#          output-dir: dist/
+#          merge-multiple: true
 
 
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
           name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
-          path: dist/
+          path: dist
           merge-multiple: true
 
 
@@ -69,18 +69,11 @@ jobs:
           with:
             # unpacks all CIBW artifacts into dist/
             pattern: cibw-*
-            path: dist/
+            path: dist
             merge-multiple: true
 
-#        - name: Upload to PyPI
-#          env:
-#              TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
-#              TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
-#          run: |
-#              python -m pip install --upgrade pip twine
-#              twine upload dist/*
         - name: Publish distribution 📦 to PyPI
-          uses: pypa/gh-action-pypi-publish@master
+          uses: pypa/gh-action-pypi-publish@v1.12.4
           with:
             password: ${{ secrets.PYPI_API_TOKEN }}
 
