--- a/.github/workflows/wheel_publish.yml
+++ b/.github/workflows/wheel_publish.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
+      #  sdist used to compile in user local environment
       - name: Build sdist
         run: pipx run build --sdist
 
@@ -49,7 +49,8 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
+#          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
+          name: cibw-wheels
           path: dist/*.whl
 
 
