--- a/.github/workflows/wheel_publish.yml
+++ b/.github/workflows/wheel_publish.yml
@@ -45,12 +45,10 @@ jobs:
           output-dir: dist/
           merge-multiple: true
 
-
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-#          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
-          name: cibw-wheels
+          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
           path: dist/*.whl
 
 
