--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,30 +2,29 @@
 name = "Python-EasyGraph"
 version = "0.2a40"
 authors = [
-    { name = "Fudan MSN Group", email = "easygraph@163.com" },
+	{ name = "Fudan MSN Group", email = "easygraph@163.com" },
 ]
 description = "Easy Graph"
 readme = "README.rst"
 requires-python = ">=3.10"
 license = "BSD-3-Clause"
 classifiers = [
-    "Programming Language :: Python :: 3.10",
-    "Operating System :: OS Independent",
+	"Programming Language :: Python :: 3.10",
+	"Operating System :: OS Independent",
 ]
 dependencies = [
-    "gensim>=4.2.0",
-    "joblib>=1.1.1",
-    "matplotlib>=3.3.4",
-    "nose>=1.3.7",
-    "numpy>=1.19.5",
-    "pandas>=0.25.3",
-    "progressbar>=2.5",
-    "progressbar33>=2.4",
-    "scikit-learn>=0.24.2",
-    "scipy>=1.5.4",
-    "six>=1.17.0",
-    "statsmodels>=0.12.2",
-    "tqdm>=4.64.1",
+	"gensim>=4.2.0",
+	"joblib>=1.1.1",
+	"matplotlib>=3.3.4",
+	"numpy>=1.19.5",
+	"pandas>=0.25.3",
+	"progressbar>=2.5",
+	"progressbar33>=2.4",
+	"scikit-learn>=0.24.2",
+	"scipy>=1.5.4",
+	"six>=1.17.0",
+	"statsmodels>=0.12.2",
+	"tqdm>=4.64.1",
 ]
 
 [project.scripts]
@@ -39,14 +38,18 @@ build-dir = "build/{wheel_tag}"
 requires = ["scikit-build-core>=0.10", "pybind11"]
 build-backend = "scikit_build_core.build"
 
-[tool.setuptools.packages.find]
-where = ["."]
+[tool.setuptools]
+packages = ["easygraph"]
+
+[tool.scikit-build.cmake]
+source-dir = "_cpp_easygraph"
 
 [dependency-groups]
 dev = [
-    "pytest>=8.4.2",
-    "ruff>=0.14.1",
-    "scikit-build-core>=0.11.6",
+	"pandas-stubs>=2.3.2.250926",
+	"pytest>=8.4.2",
+	"ruff>=0.14.1",
+	"scikit-build-core>=0.11.6",
 ]
 
 
@@ -54,5 +57,86 @@ dev = [
 python_files = "**/tests/test_*.py"
 addopts = "-ra --disable-warnings"
 
-[tool.scikit-build.cmake]
-source-dir = "cpp_easygraph"
+
+# pyproject.toml
+[tool.ruff]
+target-version = "py310"   # 原 min_python_version
+line-length = 88       # 原 max-line-length
+
+[tool.ruff.lint]
+# 只启用你确实想要的规则族：
+# - E/F/W: pycodestyle/pyflakes
+# - I: isort（导入排序）
+# - B: flake8-bugbear
+# - UP: pyupgrade（含“优先 f-string”）
+# - Q: flake8-quotes（引号风格）
+# - SIM: flake8-simplify
+# - TID: flake8-tidy-imports（含 TID252 禁止相对导入）
+# - TCH: flake8-type-checking（类型导入移动到 if TYPE_CHECKING）
+# - ERA: eradicate（清理注释死码）
+select = [
+	"E", "F", "W",
+	"I",
+	"B",
+	"UP",
+	"Q",
+	"SIM",
+	"TID",
+	"TCH",
+	"ERA",
+]
+
+# 仅保留你确实需要的忽略。E203 与 Black 冲突通常忽略。
+ignore = [
+	"E203",
+	# 你若不想启用某个规则族，就别放进 select；无需在 ignore 里罗列一堆。
+]
+
+# （可选）按文件忽略
+# per-file-ignores = { "tests/**.py" = ["S101"] }
+
+# —— 各插件的细化配置 —— #
+
+[tool.ruff.lint.flake8-quotes]
+# 原 flake8: inline-quotes = double
+inline-quotes = "double"
+# 若想统一 docstring/多行字符串：
+# multiline-quotes = "double"
+# docstring-quotes = "double"
+
+[tool.ruff.lint.flake8-tidy-imports]
+# 原 flake8: ban-relative-imports = true  ==> TID252
+ban-relative-imports = "all"
+
+[tool.ruff.lint.flake8-type-checking]
+# 原: type-checking-exempt-modules = typing, typing-extensions
+exempt-modules = ["typing", "typing_extensions"]
+
+# eradicate（清理注释死码）
+[tool.ruff.lint.flake8-eradicate]
+# 原 flake8-eradicate 的 whitelist-extend 在 Ruff 中没有等价项；
+# 如果你需要排除某些模式，建议用 per-file-ignores 或者在 ERA 里关闭对应规则。
+# aggressive = true  #（可选）更激进清理
+
+[tool.tox]
+# 定义通用配置
+requires = ["tox-uv>=1.0"]
+provision = ".tox-uv"
+skipsdist = false
+env_list = ["py36", "py37", "py38", "py39", "py310"]
+
+[tool.tox.env]
+# 默认环境配置
+deps = [
+	"lxml",
+	"pytest",
+	"."
+]
+commands = [
+	"pytest {posargs}"
+]
+
+[tool.tox.env.pyver]
+description = "Simply check the Python version, do not install the package"
+skipsdist = true
+commands = ["python --version"]
